[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/interface/game/recruit/RecruitDialogue.gd" type="Script" id=1]
[ext_resource path="res://source/interface/game/recruit/UnitRecruitInfo.tscn" type="PackedScene" id=2]


[node name="RecruitDialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -321.0
margin_top = -246.0
margin_right = 321.0
margin_bottom = 246.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 635.0
margin_bottom = 485.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 628.0
margin_bottom = 414.0
size_flags_vertical = 3

[node name="UnitRecruitInfo" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 309.0
margin_bottom = 414.0

[node name="Separator" type="ColorRect" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 315.0
margin_bottom = 414.0
rect_min_size = Vector2( 2, 2 )

[node name="Options" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 319.0
margin_right = 628.0
margin_bottom = 414.0
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 418.0
margin_right = 628.0
margin_bottom = 478.0
rect_min_size = Vector2( 0, 60 )

[node name="Recruit" type="Button" parent="Panel/VBoxContainer/Buttons"]
margin_right = 312.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Recruit"

[node name="Cancel" type="Button" parent="Panel/VBoxContainer/Buttons"]
margin_left = 316.0
margin_right = 628.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Cancel"
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Recruit" to="." method="_on_Recruit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
